fix: 💄 Header uppercase only needed on mobile

--- a/src/components/Header/index.scss
+++ b/src/components/Header/index.scss
@@ -29,9 +29,12 @@ h1 {
   padding: 10px;
   color: $primary-color;
   text-decoration: none;
-  text-transform: uppercase;
 
   &:hover {
     text-decoration: underline;
+  }
+
+  @include desktop-display {
+    text-transform: uppercase;
   }
 }
